After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 780297 - convertframe: Fix async video sample conversion with non-default context
convertframe: Fix async video sample conversion with non-default context
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
unspecified
Other All
: Normal normal
: 1.10.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-03-20 11:53 UTC by Arun Raghavan
Modified: 2017-03-20 15:38 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
convertframe: Fix async video sample conversion with non-default context (2.55 KB, patch)
2017-03-20 11:54 UTC, Arun Raghavan
committed Details | Review
convertframe: Fix async video sample conversion with non-default context (2.55 KB, patch)
2017-03-20 15:33 UTC, Arun Raghavan
committed Details | Review

Description Arun Raghavan 2017-03-20 11:53:56 UTC
The GSource for dealing with timeouts in
gst_video_convert_sample_async() might be attached to a non-default
context, so we should not be using g_source_remove() on the returned ID.

The correct thing to do is to keep a reference to the actual GSource and
then call g_source_destroy() on it.
Comment 1 Arun Raghavan 2017-03-20 11:54:02 UTC
Created attachment 348308 [details] [review]
convertframe: Fix async video sample conversion with non-default context
Comment 2 Arun Raghavan 2017-03-20 11:54:29 UTC
We might want to push this to 1.10 as well.
Comment 3 Sebastian Dröge (slomo) 2017-03-20 12:10:16 UTC
Yes, also 1.10
Comment 4 Arun Raghavan 2017-03-20 15:32:56 UTC
The following fix has been pushed:
a6742e8 convertframe: Fix async video sample conversion with non-default context
Comment 5 Arun Raghavan 2017-03-20 15:33:09 UTC
Created attachment 348327 [details] [review]
convertframe: Fix async video sample conversion with non-default context

The GSource for dealing with timeouts in
gst_video_convert_sample_async() might be attached to a non-default
context, so we should not be using g_source_remove() on the returned ID.

The correct thing to do is to keep a reference to the actual GSource and
then call g_source_destroy() on it.